--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'androidx.compose.material:material:1.1.1'
     implementation 'androidx.navigation:navigation-compose:2.6.0-alpha04'
     implementation 'androidx.navigation:navigation-runtime:2.6.0-alpha04'
+    implementation 'android.arch.lifecycle:viewmodel:1.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
