--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.1.1'
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
     implementation 'androidx.navigation:navigation-compose:2.6.0-alpha04'
     implementation 'androidx.navigation:navigation-runtime:2.6.0-alpha04'
     implementation 'android.arch.lifecycle:viewmodel:1.1.1'
